abiword (2.9.2-3) unstable; urgency=low

  * debian/abiword.mime: added missing end-of-line
    (Closes: #623136) Thanks to Kalle Olavi Niemitalo <kon@iki.fi>
  * VCS links to point to collab-maint

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Thu, 19 Jan 2012 19:31:11 +1100

abiword (2.9.2-2) unstable; urgency=low

  * libabiword-2.9-dev Depends (Closes: #656252)
  * fixed debian/patches/series
  * fixed arch-dependent patching (Closes: #648153)
  * safer parallel build

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Thu, 19 Jan 2012 03:13:36 +1100

abiword (2.9.2-1) unstable; urgency=low

  * New Upstream Release (2011-11-14)
  * New maintainer (Closes: #648341)
  * Packaging update
    + standards to recent versions
    - completely dropped CDBS, in favour of debhelper
    + parallel build
    + --as-needed to minimize needless linking
    + dh-autoreconf replaced old patches for make files
    + use dpkg-provided build flags + hardening
    + build-depends update (Closes: #655308)
      - dropped libgoffice dependency (to package latest abiword 2.9.2)
      + added note to README.Debian
    + debian/copyright to DEP-5 format
    + revised mime-types-desktop patch (Closes: #608164)
    + new patch to disable smooth scrolling (Closes: #624095)
    + new patch (only applied on Hurd) to fix GNU Hurd build problem
      (Closes: #648153) (Thanks to Svante Signell)
    + debian/watch is updated
    - README.source is removed

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Mon, 21 Nov 2011 01:58:27 +1100

abiword (2.9.1-0.2) unstable; urgency=low

  * Non-maintainer upload.
  * Drop Build-Depends on obsolete libgucharmap2-dev. Closes: #648026

 -- Michael Biebl <biebl@debian.org>  Tue, 08 Nov 2011 13:06:45 +0100

abiword (2.9.1-0.1) unstable; urgency=low

  [ Hector Oron ]
  * New upstream release.
  * Fix plugin license incompatibility introduced in NMU
    abiword/2.8.6-0.1 (Closes: #602687).
  * Merge diff for NMU version 2.8.6-0.3 (Closes: #613294).