@@ -1,3 +1,3 @@
 usr/include
-usr/lib/libabiword-2.9.a
+#usr/lib/libabiword-2.9.a
 usr/lib/pkgconfig/abiword-2.9.pc
