@@ -3,6 +3,12 @@ abiword (2.9.2-3) unstable; urgency=low
   * debian/abiword.mime: added missing end-of-line
     (Closes: #623136) Thanks to Kalle Olavi Niemitalo <kon@iki.fi>
   * VCS links to point to collab-maint
+  * Build options updated:
+    + new plugin: epub
+    + --with-libtidy to clean up HTML before importing (MHT plugin)
+    - remover --enable-static (no longer build static libraries)
+    - removed --enable-shave (use --enable-silent-rules instead)
+    + added --enable-silent-rules
 
  -- Dmitry Smirnov <onlyjob@member.fsf.org>  Thu, 19 Jan 2012 19:31:11 +1100
 
